--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL = "mongodb+srv://dsquare:kazeem@cluster0.vmlcc.mongodb.net/dsquare"
 NEXTAUTH_SECRET = 'd-square-jwt'
+GOOGLE_CLIENT_ID = "1067756464809-f5bhq6a9tjs57gjh3m23j470sa7emt61.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
