--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/utils": "^6.1.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.7.6",
     "@types/react": "18.3.11",
