--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.15",
+    "micro": "^10.0.1",
     "moment": "^2.30.1",
     "next": "^14.2.15",
     "next-auth": "^4.24.7",
